Build macOS wheels

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,9 @@ if (BUILD_PYTHON_SHARED_LIBRARY STREQUAL "ON")
     )
     target_include_directories(${PYTHON_SHARED_LIB} PRIVATE ${Python3_INCLUDE_DIRS} ${IRIDIUM_IMT_LIB})
     target_link_libraries(${PYTHON_SHARED_LIB} PRIVATE ${Python3_LIBRARIES} ${IRIDIUM_IMT_LIB})
+    if(APPLE)
+        target_link_options(${PYTHON_SHARED_LIB} PRIVATE "-undefined" "dynamic_lookup")
+    endif()
 
     set_target_properties(${PYTHON_SHARED_LIB} PROPERTIES OUTPUT_NAME ${PYTHON_SHARED_LIB})
 endif()
