--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,11 @@ permissions:
 jobs:
   publish:
     name: publish wheels to pypi
-    environment: Release
+    environment:
+      name: Release
+      url: https://pypi.org/p/rockblock9704
+    permissions:
+      id-token: write
     runs-on: ubuntu-latest
 
     steps:
@@ -30,9 +34,5 @@ jobs:
       - name: install dependencies
         run: python -m pip install twine
         
-      - name: publish package distributions to testpypi
-        shell: bash
-        env:
-         TWINE_USERNAME: "__token__"
-         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-        run: python3 -m twine upload --verbose --skip-existing wheelhouse/*
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
