--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,10 +3,6 @@ name: publish
 on:
   workflow_call:
 
-permissions:
-  contents: write
-  id-token: write
-
 jobs:
   publish:
     name: publish wheels to pypi
@@ -14,6 +10,9 @@ jobs:
     environment:
       name: Release
       url: https://pypi.org/p/rockblock9704
+    permissions:
+      contents: read
+      id-token: write
 
     steps:
       - name: download artifacts
@@ -25,6 +24,6 @@ jobs:
         run: |
           mkdir wheelhouse
           cp artifacts/**/*.whl wheelhouse/
-        
+
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
