--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=RockBLOCK-9704
 version=1.0.0
 author=Ground Control
-maintainer=jakub.spychalski@groundcontrol.com
+maintainer=help@groundcontrol.com
 sentence=Rockblock 9704 IMT communication library
 category=Communication
 architectures=*
