--- a/library.properties
+++ b/library.properties
@@ -3,8 +3,7 @@ version=0.1.18
 author=Ground Control
 maintainer=help@groundcontrol.com
 sentence=Rockblock 9704 IMT communication library.
-paragraph=This library provides useful functions for connecting to a RockBLOCK9704 via Serial, checking modem information, sending messages via Iridium IMT \
-  and receiving messages.
+paragraph=This library provides useful functions for connecting to a RockBLOCK9704 via Serial, checking modem information, sending messages via Iridium IMT and receiving messages.
 url=https://github.com/rock7/RockBLOCK-9704
 category=Communication
 architectures=*
