Started unit tests for imt_queue

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -27,6 +27,7 @@ add_subdirectory(${MOCK_DIR} ${MOCK_LIB})
 add_executable(
     tests
     test-jspr-parse.cpp
+    test-imt-queue.cpp
     )
 
 target_link_libraries(
