Started unit tests for jspr_command

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(
     tests
     test-jspr-parse.cpp
     test-imt-queue.cpp
+    test-jspr-command.cpp
     )
 
 target_link_libraries(
