--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,62 +114,36 @@ endif()
 
 
 if (BUILD_LUA_SHARED_LIBRARY STREQUAL "ON")
-    # TODO - MAKE THIS WORK RATHER THAN HARD CODING
-    #find_package(Lua54 REQUIRED)
 
-    # Path to the directory containing Lua header files (e.g., lua.h, lauxlib.h)
-    set(Lua54_INCLUDE_DIR "C:/Users/Joel/Documents/Lua/lua/include")
-    message(STATUS "Hardcoding Lua Include Dir: ${Lua54_INCLUDE_DIR}")
+    find_package(Lua)
 
-    # Path to the Lua library file (e.g., lua54.lib for MSVC)
-    set(Lua54_LIBRARIES "C:/Users/Joel/Documents/Lua/lua/bin/lua54.lib")
-    message(STATUS "Hardcoding Lua Libraries: ${Lua54_LIBRARIES}")
+    if (Lua_FOUND)
+        message(STATUS "Found Lua ${LUA_VERSION_STRING}")
+        add_library(${LUA_SHARED_LIB} SHARED
+            ${LUA_SRC_DIR}/rockblock_lua_wrap.cxx # Path to generated SWIG file
+        )
 
-    # This boolean is usually set by find_package. Manually set it to TRUE to proceed.
-    set(Lua54_FOUND TRUE)
+        target_include_directories(${LUA_SHARED_LIB} PRIVATE
+            ${LUA_INCLUDE_DIR}
+            ${IRIDIUM_IMT_LIB}
+        )
 
-    # Ensure Lua was "found" (or manually marked as found)
-    if(NOT Lua54_FOUND)
-        message(FATAL_ERROR "Lua 5.4 was not found, even with hardcoded paths. Please check your paths.")
+        target_link_libraries(${LUA_SHARED_LIB} PRIVATE
+            ${LUA_LIBRARIES}
+            ${IRIDIUM_IMT_LIB}
+        )
+
+        # if(APPLE)
+        #     target_link_options(${LUA_SHARED_LIB} PRIVATE "-undefined" "dynamic_lookup")
+        # endif()
+
+        set_target_properties(${LUA_SHARED_LIB} PROPERTIES OUTPUT_NAME ${LUA_SHARED_LIB})
+
+    else()
+        message(FATAL_ERROR "Lua was not found")
     endif()
 
 
-    # Define the shared library for Lua
-    add_library(${LUA_SHARED_LIB} SHARED
-        ${SRC_DIR}/rockblock_9704.c
-        ${SRC_DIR}/jspr_command.c
-        ${SRC_DIR}/jspr.c
-        ${SRC_DIR}/${GPIO_SRC}
-        ${SRC_DIR}/crossplatform.c
-        ${SRC_DIR}/serial.c
-        ${SRC_DIR}/serial_presets/serial_linux/serial_linux.c
-        ${SRC_DIR}/serial_presets/serial_windows/serial_windows.c
-        ${SRC_DIR}/serial_presets/serial_arduino/serial_arduino.cpp
-        ${LUA_SRC_DIR}/rockblock_lua_wrap.cxx # Path to generated SWIG file
-    )
-
-    target_include_directories(${LUA_SHARED_LIB} PRIVATE
-        ${Lua54_INCLUDE_DIR}
-        ${IRIDIUM_IMT_LIB}
-        ${CMAKE_CURRENT_SOURCE_DIR}
-    )
-
-    target_link_libraries(${LUA_SHARED_LIB} PRIVATE
-        ${Lua54_LIBRARIES}
-        ${IRIDIUM_IMT_LIB}
-    )
-
-    if(APPLE)
-        target_link_options(${LUA_SHARED_LIB} PRIVATE "-undefined" "dynamic_lookup")
-    endif()
-
-    set_target_properties(${LUA_SHARED_LIB} PROPERTIES
-        OUTPUT_NAME ${LUA_SHARED_LIB} # Sets the base name
-        # SUFFIX ".so" # Linux/macOS suffix (CMake handles .dll for Windows automatically for SHARED libraries)
-                      # SWIG will likely use 'rockblock_lua.so' for a module named 'rockblock_lua'.
-                      # Check SWIG's output naming conventions carefully.
-                      # If SWIG output is always rockblock_lua.so, you'd name your add_library target 'rockblock_lua'.
-    )
 endif()
 
 add_executable(${REFLECTED_BIN} ${EXAMPLE_DIR}/reflected.c)
