--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ windows-latest, macos-latest, macos-15-intel, ubuntu-latest, ubuntu-24.04-arm ]
-        python: [3.9, 3.10, 3.11, 3.12, 3.13, 3.14]
+        python: [ "3.9", "3.10", "3.11", "3.12", "3.13", "3.14" ]
 
     steps:
       - uses: actions/checkout@v6
