--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,11 +20,11 @@ jobs:
       
       - uses: actions/setup-python@v6
         with:
-          python-version: '${{ matrix.python }}'
+          python-version: ${{ matrix.python }}
       - run: python -m pip install -r requirements.txt
       - run: python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_PROJECT_REQUIRES_PYTHON: '${{ matrix.python }}'
+          CIBW_PROJECT_REQUIRES_PYTHON: ${{ matrix.python }}
 
       - uses: actions/upload-artifact@v6
         with:
