--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - run: python -m pip install -r requirements.txt
       - run: python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_PROJECT_REQUIRES_PYTHON: ${{ matrix.python }}
+          CIBW_PROJECT_REQUIRES_PYTHON: ~= ${{ matrix.python }}
 
       - uses: actions/upload-artifact@v6
         with:
