--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ permissions:
 
 jobs:
   build_wheels:
-    name: build wheels for python ${{ matrix.python }} on ${{ matrix.os }}
+    name: python ${{ matrix.python }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -24,11 +24,11 @@ jobs:
       - run: python -m pip install -r requirements.txt
       - run: python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_PROJECT_REQUIRES_PYTHON: ~= ${{ matrix.python }}
+          CIBW_PROJECT_REQUIRES_PYTHON: == ${{ matrix.python }}
 
       - uses: actions/upload-artifact@v6
         with:
-          name: rockblock-9704-python-{{ matrix.python}}-${{ matrix.os }}
+          name: rockblock-9704-python-${{ matrix.python }}-${{ matrix.os }}
           path: wheelhouse/*
           retention-days: 3
           overwrite: true
