--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,27 +8,39 @@ permissions:
 
 jobs:
   build_wheels:
-    name: python ${{ matrix.python }} on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
+    name: python ${{ matrix.python }} on ${{ matrix.platform[1] }}
+    runs-on: ${{ matrix.platform[0] }}
     strategy:
       matrix:
-        os: [ windows-latest, macos-latest, macos-15-intel, ubuntu-latest, ubuntu-24.04-arm ]
-        python: [ "3.9", "3.10", "3.11", "3.12", "3.13", "3.14" ]
+        python: 
+          - "cp39"
+          - "cp310"
+          - "cp311" 
+          - "cp312" 
+          - "cp313"
+          - "cp314"
+        platform:
+          - [ubuntu-latest, manylinux_x86_64]
+          - [ubuntu-latest, musllinux_x86_64]
+          - [ubuntu-24.04-arm, manylinux_aarch64]
+          - [ubuntu-24.04-arm, musllinux_aarch64]
+          - [macos-15-intel, macosx_x86_64]
+          - [macos-latest, macosx_arm64]
+          - [windows-latest, win_amd64]
+          - [windows-latest, win32]
+        
 
     steps:
       - uses: actions/checkout@v6
-      
-      - uses: actions/setup-python@v6
-        with:
-          python-version: ${{ matrix.python }}
-      - run: python -m pip install -r requirements.txt
-      - run: python -m cibuildwheel --output-dir wheelhouse
+
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v3.3.1
         env:
-          CIBW_PROJECT_REQUIRES_PYTHON: ~= ${{ matrix.python }}
+          CIBW_BUILD: ${{ matrix.python }}-${{ matrix.platform[1] }}-*
 
       - uses: actions/upload-artifact@v6
         with:
-          name: rockblock-9704-python-${{ matrix.python }}-${{ matrix.os }}
+          name: rockblock-9704-${{ matrix.python }}-${{ matrix.platform[1] }}
           path: wheelhouse/*
           retention-days: 3
           overwrite: true
