--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v3.3.1
         env:
-          CIBW_BUILD: ${{ matrix.python }}-${{ matrix.platform[1] }}-*
+          CIBW_BUILD: ${{ matrix.python }}-*-${{ matrix.platform[1] }}
 
       - uses: actions/upload-artifact@v6
         with:
