--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,9 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: download artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
       - name: bundle
-        run: tar -zcvf ./rockblock-9704-python.tar.gz rockblock-9704-python-*
+        run: tar -zcvf ./rockblock-9704-python.tar.gz rockblock-9704-cp*
       - name: create release
         uses: softprops/action-gh-release@v2
         with:
