Revert "test publish"
This reverts commit c650a182bb6c898bd81a9d978e2815f421f6333a.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,8 +8,8 @@ jobs:
     name: publish wheels to pypi
     runs-on: ubuntu-latest
     environment:
-      name: testpypi
-      url: https://test.pypi.org/legacy/
+      name: Release
+      url: https://pypi.org/p/rockblock9704
     permissions:
       id-token: write
 
