set lib include directory without FW_UPDATE ON

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,8 +23,10 @@ if (GPIO_ENABLED)
     target_link_libraries(${IRIDIUM_IMT_LIB} PUBLIC ${LIB_GPIOD})
 endif()
 
+target_include_directories(${IRIDIUM_IMT_LIB} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
 if (DEFINED FW_UPDATE AND FW_UPDATE STREQUAL "ON")
     target_compile_definitions(${IRIDIUM_IMT_LIB} PUBLIC KERMIT)
     target_link_libraries(${IRIDIUM_IMT_LIB} PUBLIC ${KERMIT_LIB})
-    target_include_directories(${IRIDIUM_IMT_LIB} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${KERMIT_DIR} ${KERMIT_IO_DIR})
+    target_include_directories(${IRIDIUM_IMT_LIB} PUBLIC ${KERMIT_DIR} ${KERMIT_IO_DIR})
 endif()
